feat(performance): Implement Redis caching for redirects

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ MONGO_URI="mongodb+srv://<user>:<password>@<cluster-url>/url-shortener?retryWrit
 # Docker MongoDB Credentials
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=password
+
+# Redis Configuration
+REDIS_URL="redis://localhost:6379"
