--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "url-shortener",
   "version": "1.0.0",
-  "description": "A simple URL shortener API using Node.js, Express, MongoDB, and TypeScript.",
+  "description": "A URL shortener API using Node.js, Express, MongoDB, and TypeScript, with a Redis caching layer for performance.",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
@@ -23,12 +23,14 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "@types/redis": "^4.0.10",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
