--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "nanoid": "^5.1.5",
+    "node-cron": "^4.2.1",
     "redis": "^5.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
+    "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.10",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
